--- a/index.Rmd
+++ b/index.Rmd
@@ -15,6 +15,7 @@ knitr::include_graphics("logoPUCP.png")
 ```
 
 ## Introducción
+
 La siguiente investigación analiza los factores que pueden favorecer el índice de desarrollo humano propuestos por la PNUD. Se sostiene que existen tres factores principales; sociales, políticos y económicos, El factor político será medido a través del nivel de democratización, el económico por las libertades económicas y, finalmente, el social será la brecha de género
 
 ```{r, echo=FALSE}
@@ -25,10 +26,12 @@ data= import("https://github.com/WendyAdrianzenRossi/Trabajofinal/raw/main/dataf
 ## 1. Análisis rápido de la data
 
 ## 2. Modelación
+
 ```{r echo=FALSE}
 modelo= lm(scoreidh ~ scoreEco+ scoreDemo + scoreGender, data=data) 
 summary(modelo)
 ```
+
 ```{r echo=FALSE}
 equatiomatic::extract_eq(modelo, use_coefs = TRUE)
 ```
@@ -44,3 +47,4 @@ modelsummary(modelo, title = "Resumen de Regresion Lineal",
 
 Al analizar los tres factores en el mismo modelo, solo la libertad económica tienen un efecto significativo positivo en el desarrollo humano. Esto significa que a mayor libertad económica, mayor idh.
 
+## 3. Análisis facyotial
