--- a/index.Rmd
+++ b/index.Rmd
@@ -10,6 +10,8 @@ output:
     toc: true
 ---
 hello
+hola
+hola
 
 ```{r,echo=FALSE, out.width="40%",fig.align="center"}
 knitr::include_graphics("logoPUCP.png") 
